--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,5 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding: 0;
-  background: #E0E0E0;
+  background-color: #E0E0E0;
 }
