--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,28 @@ body {
   padding: 0;
   background-color: #E0E0E0;
 }
+
+
+@media (max-width: 1200px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 1024px) {
+  html {
+    font-size: 15px;
+  }
+} 
+
+@media (max-width: 768px) {
+  html {
+    font-size: 14px;
+  }
+} 
+
+@media (max-width: 480px) {
+  html {
+    font-size: 14px;
+  }
+} 
